--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ p {
   <h2>My Love <span class="name">Dipali</span> ❤️</h2>
 
   <!-- Dipali Photo -->
-  <img src="dipali.jpg" alt="Dipali" class="photo">
+  <img src="dipali.jpeg" alt="Dipali" class="photo">
 
   <div class="rose-big">🌹</div>
 
@@ -130,3 +130,4 @@ setInterval(createRose, 700);
 
 </body>
 </html>
+
